<resources>
    <string name="app_name">Project_PRM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login region -->
    <string name="button_login_text">LOGIN</string>
    <string name="user_email">UserEmail</string>
    <string name="user_password">Password</string>
    <string name="hint_text_email">Enter your email</string>
    <string name="hint_text_password">Enter your password</string>
    <!-- end region -->

    <!-- Sign Up region-->
    <string name="button_signup_text">Sign Up</string>
    <string name="match_password">Passwords must match</string>
    <string name="space_password">Password cannot contain spaces</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="email_existing">Email has been existed</string>
    <string name="empty_username">Enter your Username</string>
    <string name="empty_email">Enter your Email</string>
    <string name="empty_password">Enter your Password</string>
    <string name="validate_password">Password must be greater 6 character</string>
    <string name="empty_confirmPassword">Enter your Confirm Password</string>
    <string name="validate_email">Wrong or Invalid email address.</string>
    <!-- end region -->

    <!-- Friends Region -->
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="find_other_user">Find other user</string>
    <!-- end region -->

    <!-- Loading region-->
    <string name="loading">Loading, please wait...</string>
    <!-- end region -->

    <!-- Find Other User region -->
    <string name="find_other_user_here_hint">Find other user here!</string>
    <string name="no_user_found">No User Found!!!</string>
    <!-- end region -->

    <!-- Get Other User Profile -->
    <string name="already_add_friend">Already sent friend request</string>
    <string name="add_friend">Add Friend</string>
    <string name="chat">Chat</string>
    <!-- end region -->

    <!-- Network region -->
    <string name="no_network_connection_error_text">Please connect to internet</string>
    <!-- end region -->

    <!-- SharedPreferences region -->
    <string name="preference_file_key">preference_file_key</string>
    <!-- end region -->
</resources>